--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# Di dalam .github/workflows/deploy.yml
 name: Deploy to VPS
 
 on:
@@ -16,7 +15,7 @@ jobs:
           username: root
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /app
-            git pull
-            docker compose down
-            docker compose up -d --build
+            cd /var/www/test/my-app
+            git pull origin master
+            docker-compose down
+            docker-compose up -d --build   # Pastikan ini selalu dijalankan
